<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/acttivity_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/colorPrimaryDark"
    android:backgroundTint="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".ui.neighbour_list.DetailVoisinActivity">


    <ImageView
        android:id="@+id/image_avatar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="350dp"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/ic_launcher_background" />

    <ImageButton
        android:id="@+id/imageButtonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:padding="20dp"
        app:srcCompat="@drawable/ic_arrow_back_black_24dp" />

    <TextView
        android:id="@+id/nameProfil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="230dp"
        android:textColor="@color/cardview_light_background"
        android:textSize="40dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-14dp"
        tools:layout_editor_absoluteY="227dp" />


    <android.support.v7.widget.CardView
        android:id="@+id/activity_profil_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="320dp"
        android:layout_marginEnd="8dp"
        android:minHeight="150dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/activity_name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="5dp"
            android:textSize="20dp"/>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="46dp"
            app:srcCompat="@drawable/ic_location_on_black_24dp" />

        <TextView
            android:id="@+id/activity_adresse_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="8dp"
            android:text="Saint pierre du mont à 5km" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="84dp"
            app:srcCompat="@drawable/ic_phone_black_24dp" />

        <TextView
            android:id="@+id/activity_phone_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="8dp"
            android:text="+33 6 86 57 90 14" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="120dp"
            app:srcCompat="@drawable/ic_language_black_24dp" />

        <TextView
            android:id="@+id/activity_mail_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="118dp"
            android:layout_marginEnd="8dp" />


    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/activity_profil_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="490dp"
        android:layout_marginEnd="8dp"
        android:minHeight="150dp"
        tools:ignore="DuplicateIds,MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="437dp">

        <TextView
            android:id="@+id/activity_desc_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="8dp"
            android:text="    A propos de moi"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/activity_descri_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="58dp"
            android:layout_marginEnd="8dp"
            android:padding="17dp"
            android:text="Bonjour !Je souhaiterais faire de la marche nordique. pas initiée,je recherche une ou plusieurs personnes susceptibles de m accompagner !J'aime les jeux de cartes tels la belote et le tarot..."
            android:textSize="12dp" />


    </android.support.v7.widget.CardView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButtonFav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_marginTop="280dp"
        android:layout_marginStart="340dp"
        app:srcCompat="@drawable/ic_star_border_white_24dp"
        />


</RelativeLayout>






